--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.18"
+    "@heroicons/vue": "^2.0.18",
+    "@vueuse/core": "^10.5.0"
   }
 }
