--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.5.0",
     "vue3-perfect-scrollbar": "^1.6.1"
   }
