--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@heroicons/vue": "^2.0.18",
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.5.0",
+    "pinia": "^2.1.7",
     "vue3-perfect-scrollbar": "^1.6.1"
   }
 }
